--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
-    <h1 id="folder"></h1>
+    <h1 id="title"></h1>
     <script src="example.js"></script>
     
     <script>
